test_regress/t/t_var_ref_bad1.out
%Error: t/t_var_ref_bad1.v:14:8: Ref connection 'bad_sub_ref' requires matching types; ref requires 'real' data type but connection is 'bit' data type.
                               : ... In instance t
   14 |      (.bad_sub_ref(bad_parent));   
      |        ^~~~~~~~~~~
%Error: Exiting due to
